Closed Bug 143771 Opened 24 years ago Closed 23 years ago

Embedding API not exported as C linkage

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
All
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: hingwah, Assigned: adamlock)

References

Details

(Keywords: embed, topembed-)

Attachments

(1 file)

the API NS_InitEmbedding and NS_TermEmbedding is not exported as C linkage and it create compiler dependency
Severity: normal → critical
Priority: -- → P1
Target Milestone: --- → mozilla1.0
The target milestone and priority fields are only for the assigned developer...
Priority: P1 → --
Target Milestone: mozilla1.0 → ---
Confirming. Wouldn't this mean that NS_NewLocalFile would have to be extern "C" too, then?
Status: UNCONFIRMED → NEW
Ever confirmed: true
It will be nice if NS_NewGenericFactory and NS_NewGenericModule2 be exported as C linkage too
Looking at CVS, this became frozen in September last year.
I don't see this as much of an issue. NS_InitEmbedding & NS_TermEmbedding are compiled into a static lib, not exported from a DLL or whatever.
Severity: critical → major
But it also doesn't hurt to change it,and you also prevent it from calling in C
C users are going to hit problems with XPCOM in general so it's an issue much broader than these APIs.
Leaving as an embed issue
Keywords: topembedtopembed-
Target Milestone: --- → Future
Depends on: 143887
Can I have a review on the patch? It adds extern "C". As embedding is a static lib, it shouldn't pose any binary compatibility issues.
Comment on attachment 92789 [details] [diff] [review] Patch makes embedding apis extern "c" Doug & Chris, can I have an r/sr on this simple patch please?
Attachment #92789 - Flags: superreview?(blizzard)
Attachment #92789 - Flags: review?(dougt)
Attachment #92789 - Flags: review?(dougt) → review+
Comment on attachment 92789 [details] [diff] [review] Patch makes embedding apis extern "c" sr=blizzard
Attachment #92789 - Flags: superreview?(blizzard) → superreview+
Fix is checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: