Export embedding API with "C" linkage. b=143771 r=dougt@netscape.com sr=blizzard@mozilla.org